--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
             android:ems="10"
             android:hint="@string/name"
             android:text=""
+            android:inputType="text"
             android:minHeight="48dp"
             app:layout_constraintBottom_toBottomOf="@+id/textViewName"
             app:layout_constraintEnd_toEndOf="parent"
