update a little of calculation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,6 +190,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />
 
+        <TextView
+            android:id="@+id/textViewResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/result"
+            app:layout_constraintBottom_toTopOf="@+id/buttonWebsite"
+            app:layout_constraintEnd_toStartOf="@+id/space"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewYear" />
+
+        <TextView
+            android:id="@+id/textViewResultShow"
+            android:layout_width="143dp"
+            android:layout_height="24dp"
+            android:hint="@string/resultShow"
+            android:textColorHint="#757575"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewResult"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textViewResult"
+            app:layout_constraintTop_toTopOf="@+id/textViewResult" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
